fix: Scrollbar issues

--- a/src/components/Widgets/Atoms/widget.styl
+++ b/src/components/Widgets/Atoms/widget.styl
@@ -28,13 +28,19 @@
     flex: 1
     width: 100%
     height: 100%
-    overflow: scroll
+    overflow: hidden
     min-width: 0
 
 .app-tab
     transition: opacity 200ms, transform 400ms
     transition-timing-function: cubic-bezier(0.3, 0, 0, 1)
-    overflow: scroll
+    overflow-x: hidden
+    overflow-y: scroll
+    -ms-overflow-style: none
+    scrollbar-width: none
+
+.app-tab::-webkit-scrollbar
+    display: none
 
 .app-tab--entering
     transition: none;
